# shop

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
.github/workflows/: app_test.yml  django-tests.yml  django.yml
carts/: admin.py  apps.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options_and_more.py
catalog/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
catalog/migrations/: 0001_initial.py  0002_plant_created_at_plant_updated_at.py  0003_category_alter_plant_options_alter_plant_image.py  0004_plant_category.py  0005_alter_category_options.py  0006_alter_plant_category.py  0007_alter_plant_category.py  0008_alter_plant_category.py  0009_plant_popularity.py  0010_rename_popularity_plant_views_count.py  0011_plant_sale_alter_plant_image.py  0012_alter_plant_sale.py  0013_alter_plant_sale.py  0014_alter_plant_sale.py  0015_plant_stock_count.py  0016_alter_plant_stock_count.py  0017_alter_plant_price_alter_plant_sale_and_more.py  0018_alter_plant_price_alter_plant_sale_and_more.py  0019_plant_price_gt_0_plant_sale_gte_0_plant_sale_lte_100_and_more.py
catalog/templatetags/: catalog_tags.py
catalog/tests/: test_models.py  test_views.py
main/: signals.py  urls.py  views.py
main/tests/: test_views.py
shop/: settings.py  urls.py
static/css/: index.css
templates/: base.html
user/: forms.py  urls.py  views.py
user_profile/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  (+8 more)
(+18 files in other folders)
