[project]
name = "shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.10",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "ipython>=9.9.0",
    "pillow>=12.1.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-slugify>=8.0.4",
]
